fix alignment

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -16,6 +16,7 @@ code {
   border-radius: 4px;
   border: 1px solid rgba(255,255,255,0.4);
   display: inline-block;
+  text-align: left;
 }
 
 h1 {
